# microscopy-metrics

./: .buildinfo  .coverage  .gitignore  README.md  api.html  coverage.xml  genindex.html  how_to.html  index.html  microscopy_metrics.PSFGenerator.html  microscopy_metrics.analyzers.html  microscopy_metrics.detectionTools.html  microscopy_metrics.evaluate.html  microscopy_metrics.fittingTools.html  microscopy_metrics.metricTool.html  microscopy_metrics.reportTools.html  microscopy_metrics.resolutionTools.html  microscopy_metrics.thresholdTools.html  objects.inv  pyproject.toml  search.html  searchindex.js  sphinx-reading-durations.json  test.py  usage.html
.github/workflows/: create_doc.yml  test_and_deploy.yml
_modules/: index.html
_modules/microscopy_metrics/: BeadAnalyzer.html  ImageAnalyzer.html  detection.html  fitting.html  metrics.html  report_generator.html
_modules/microscopy_metrics/detectionTools/: detection_tool.html
_modules/microscopy_metrics/fittingTools/: fitting1D.html  fitting2D.html  fitting2DEllips.html  fitting2DRotation.html  fitting3D.html  fitting3DRotation.html  fittingTool.html
_modules/microscopy_metrics/metricTool/: meshTool.html  metricTool.html
_sources/: how_to.rst.txt  index.rst.txt  microscopy_metrics.PSFGenerator.rst.txt  microscopy_metrics.analyzers.rst.txt  microscopy_metrics.fittingTools.rst.txt  microscopy_metrics.metricTool.rst.txt  microscopy_metrics.reportTools.rst.txt  usage.rst.txt
docs/source/: api.rst  conf.py  how_to.rst  index.rst  microscopy_metrics.PSFGenerator.rst  microscopy_metrics.detectionTools.rst  microscopy_metrics.evaluate.rst  microscopy_metrics.fittingTools.rst  microscopy_metrics.metricTool.rst  microscopy_metrics.reportTools.rst  microscopy_metrics.resolutionTools.rst  microscopy_metrics.rst  microscopy_metrics.thresholdTools.rst  micrscopy_metrics.reportTools.rst  usage.rst
src/microscopy_metrics/: BatchAnalyzer.py  BeadAnalyze.py  BeadAnalyzer.py  ImageAnalyze.py  ImageAnalyzer.py  _version.py  detection.py  detection_tool.py  evaluate_fitting.py  fitting.py  metrics.py  report_generator.py  theoretical_resolution.py  threshold_tool.py  utils.py
src/microscopy_metrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  scm_file_list.json  scm_version.json  top_level.txt
tests/: test_PSFGenerator.py  test_beadAnalyzer.py  test_detection.py  test_fitting.py  test_imageAnalyzer.py  test_metrics.py  test_theoretical_resolution.py  test_threshold.py  test_utils.py
(+57 files in other folders)
