[project]
name = "microscopy_metrics"
dynamic = ["version"]
description = "A module for proceeding quality control with PSF"
readme = "README.md"
license = {file = "LICENSE"}
authors = [ 
    { name = "MRI-CIA", email = "mri-cia@mri.cnrs.fr" }, 
    { name = "Voker Baecker", email = "volker.baecker@mri.cnrs.fr"},
    { name = "Clément Benedetti", email = "clement.benedetti@mri.cnrs.fr"},
    { name = "Bastian Langouët", email = "langouetbastian@gmail.com" } 
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt5",
    "numpy",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "reportlab",
    "matplotlib",
    "tqdm",
    "jinja2",
    "Pillow",
    "simpleitk",
    "open3d",
    "skan>=0.13.0",
    "pyvista",
    "psfmodels"
]
[project.urls]
Homepage = "https://github.com/MontpellierRessourcesImagerie/microscopy-metrics"
Issues = "https://github.com/MontpellierRessourcesImagerie/microscopy-metrics/issues"
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "sphinx==8.2.3",
    "sphinx-rtd-theme",
    "sphinx-tabs",
    "build",
    "setuptools-scm>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/microscopy_metrics/_version.py"
write_to = "src/microscopy_metrics/_version.py"
local_scheme = "no-local-version"